--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,15 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import Hero from '@/sections/Hero.astro';
+import Testimonials from '@/sections/Testimonials.astro';
 import WhyChooseUs from '@/sections/WhyChooseUs.astro';
+
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Hero />
 		<WhyChooseUs />
+		<Testimonials />
 	</main>
 </Layout>
