--- a/src/sections/Testimonials.astro
+++ b/src/sections/Testimonials.astro
@@ -1,1 +1,147 @@
-<h2></h2>
+---
+import type { Testimonial } from "@/types/Testimonial";
+import TestimonialCard from "@/components/TestimonialCard.astro";
+
+const testimonials: Testimonial[] = [
+  {
+    author: 'Maria Camila Diaz',
+    content: '“Llevar a mis hijos al dentista solía ser una lucha, pero desde que descubrimos Cedens, todo ha cambiado. El equipo es increíblemente amable y paciente, y mis hijos ahora están emocionados por sus citas dentales. Estoy muy agradecida por el excelente cuidado que recibimos en cada visita”.',
+    imageUrl: '/img/testimonials/camila.png',
+    starsNumber: 5,
+  },
+  {
+    author: 'Sergio Gonzáles',
+    content: '“Visitar el dentista siempre me generaba ansiedad, pero el ambiente relajante y el personal comprensivo de Cedens cambiaron completamente mi perspectiva. Me explicaron cada procedimiento con detalle y mostraron una auténtica preocupación por mi comodidad”.',
+    imageUrl: '/img/testimonials/sergio.png',
+    starsNumber: 5,
+  },
+  {
+    author: 'Ana Beltrán',
+    content: '“Después de años buscando el dentista perfecto, finalmente encontré a Cedens. Su enfoque detallado y minucioso en la odontología me dio la confianza que necesitaba para realizar el tratamiento”.',
+    imageUrl: '/img/testimonials/ana.png',
+    starsNumber: 4.5,
+  },
+  {
+    author: 'Ana Beltrán',
+    content: '“Después de años buscando el dentista perfecto, finalmente encontré a Cedens. Su enfoque detallado y minucioso en la odontología me dio la confianza que necesitaba para realizar el tratamiento”.',
+    imageUrl: '/img/testimonials/ana.png',
+    starsNumber: 4.5,
+  },
+];
+---
+
+<section class="testimonials-section">
+  <div class="testimonials-section__container">
+    <h2 class="testimonials-section__title">Lo que <span class="testimonials-section__title testimonials-section__title--accent">nuestros pacientes</span> dicen</h2>
+
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        {
+        testimonials.map((testimonial) => (
+          <div class="swiper-slide">
+            <TestimonialCard testimonial={testimonial} />
+          </div>
+        ))
+        }
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-scrollbar"></div>
+    </div>
+  </div>
+</section>
+
+
+<script>
+  import Swiper from 'swiper';
+  import { Navigation, Pagination, Scrollbar } from 'swiper/modules';
+  import 'swiper/css';
+  import 'swiper/css/navigation';
+  import 'swiper/css/pagination';
+  import 'swiper/css/scrollbar';
+
+  function initSwiper() {
+    const swiper = new Swiper('.swiper', {
+      modules: [Navigation, Pagination, Scrollbar],
+      loop: true,
+      centerInsufficientSlides: true,
+      slidesPerView: 1,
+      spaceBetween: 50,
+      breakpoints: {
+        720: {
+          slidesPerView: 2,
+          spaceBetween: 50
+        },
+        1280: {
+          slidesPerView: 3,
+          spaceBetween: 50
+        }
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+
+    console.log('Swiper initialized');
+  }
+
+  // Asegúrate de que el DOM esté completamente cargado antes de inicializar Swiper
+  document.addEventListener('DOMContentLoaded', initSwiper);
+</script>
+
+<style>
+  .testimonials-section {
+    background-color: var(--color-primary);
+    padding: 32px 0;
+    position: relative;
+  }
+
+  .testimonials-section__container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+  .testimonials-section__title {
+    font-size: var(--text-3xl-font-size);
+    line-height: var(--text-3xl-line-height);
+    margin-bottom: 32px;
+    font-weight: 600;
+    text-align: center;
+    color: var(--color-tertiary);
+  }
+
+  .testimonials-section__title--accent {
+    color: var(--color-accent);
+  }
+
+  .swiper {
+    padding: 0 48px;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: var(--color-tertiary);
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 32px;
+  }
+
+  @media (min-width: 960px) {
+    .testimonials-section {
+      padding: 64px;
+    }
+
+    .testimonials-section__title {
+      font-size: var(--text-5xl-font-size);
+      line-height: var(--text-5xl-line-height);
+    }
+  }
+</style>
