--- a/src/sections/WhyChooseUs.astro
+++ b/src/sections/WhyChooseUs.astro
@@ -57,11 +57,12 @@ import CashIcon from '@/icons/Cash.astro';
 
 <style>
   .why-choose-us-section {
-    padding: 32px 64px;
+    padding: 32px;
   }
   .why-choose-us-section__title {
-    font-size: var(--text-5xl-font-size);
-    line-height: var(--text-5xl-line-height);
+    margin-bottom: 32px;
+    font-size: var(--text-3xl-font-size);
+    line-height: var(--text-3xl-line-height);
     font-weight: 600;
     text-align: center;
   }
@@ -72,8 +73,18 @@ import CashIcon from '@/icons/Cash.astro';
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
-    padding: 16px;
     max-width: 960px;
     margin: 0 auto;
+    justify-content: center;
+  }
+
+  @media (min-width: 960px) {
+    .why-choose-us-section {
+      padding-inline: 64px;
+    }
+    .why-choose-us-section__title {
+      font-size: var(--text-5xl-font-size);
+      line-height: var(--text-5xl-line-height);
+    }
   }
 </style>
