--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '@/layouts/Layout.astro';
 import Hero from '@/sections/Hero.astro';
 import Testimonials from '@/sections/Testimonials.astro';
 import WhyChooseUs from '@/sections/WhyChooseUs.astro';
+import OurTeam from '@/sections/OurTeam.astro';
 
 ---
 
@@ -11,5 +12,6 @@ import WhyChooseUs from '@/sections/WhyChooseUs.astro';
 		<Hero />
 		<WhyChooseUs />
 		<Testimonials />
+		<OurTeam />
 	</main>
 </Layout>
