--- a/src/sections/Testimonials.astro
+++ b/src/sections/Testimonials.astro
@@ -22,6 +22,18 @@ const testimonials: Testimonial[] = [
     starsNumber: 4.5,
   },
   {
+    author: 'Maria Camila Diaz',
+    content: '“Llevar a mis hijos al dentista solía ser una lucha, pero desde que descubrimos Cedens, todo ha cambiado. El equipo es increíblemente amable y paciente, y mis hijos ahora están emocionados por sus citas dentales. Estoy muy agradecida por el excelente cuidado que recibimos en cada visita”.',
+    imageUrl: '/img/testimonials/camila.png',
+    starsNumber: 5,
+  },
+  {
+    author: 'Sergio Gonzáles',
+    content: '“Visitar el dentista siempre me generaba ansiedad, pero el ambiente relajante y el personal comprensivo de Cedens cambiaron completamente mi perspectiva. Me explicaron cada procedimiento con detalle y mostraron una auténtica preocupación por mi comodidad”.',
+    imageUrl: '/img/testimonials/sergio.png',
+    starsNumber: 5,
+  },
+  {
     author: 'Ana Beltrán',
     content: '“Después de años buscando el dentista perfecto, finalmente encontré a Cedens. Su enfoque detallado y minucioso en la odontología me dio la confianza que necesitaba para realizar el tratamiento”.',
     imageUrl: '/img/testimonials/ana.png',
