--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from '@/sections/Hero.astro';
 import Testimonials from '@/sections/Testimonials.astro';
 import WhyChooseUs from '@/sections/WhyChooseUs.astro';
 import OurTeam from '@/sections/OurTeam.astro';
-
+import Cta from '@/sections/Cta.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -13,5 +13,6 @@ import OurTeam from '@/sections/OurTeam.astro';
 		<WhyChooseUs />
 		<Testimonials />
 		<OurTeam />
+		<Cta />
 	</main>
 </Layout>
