--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Testimonials from '@/sections/Testimonials.astro';
 import WhyChooseUs from '@/sections/WhyChooseUs.astro';
 import OurTeam from '@/sections/OurTeam.astro';
 import Cta from '@/sections/Cta.astro';
+import Contact from '@/sections/Contact.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,5 +15,6 @@ import Cta from '@/sections/Cta.astro';
 		<Testimonials />
 		<OurTeam />
 		<Cta />
+		<Contact />
 	</main>
 </Layout>
