--- a/src/sections/Cta.astro
+++ b/src/sections/Cta.astro
@@ -16,7 +16,7 @@ import Button from "@/components/Button.astro"
 <style>
   .cta {
     background-color: var(--color-primary);
-    padding: 32px 0;
+    padding: 32px;
     position: relative;
   }
 
@@ -50,6 +50,7 @@ import Button from "@/components/Button.astro"
     display: flex;
     gap: 32px;
     justify-content: center;
+    flex-wrap: wrap;
   }
 
   @media (min-width: 960px) {
