--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Navbar from '@/components/Navbar.astro';
+import Footer from '@/components/Footer.astro';
+
 import '@fontsource-variable/montserrat';
 
 interface Props {
@@ -24,6 +26,9 @@ const { title } = Astro.props;
 			<Navbar />
 		</header>
 		<slot />
+		<footer>
+			<Footer />
+		</footer>
 	</body>
 </html>
 <style is:global>
