Ad global title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Cta from '@/sections/Cta.astro';
 import Contact from '@/sections/Contact.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Cedens">
 	<main>
 		<Hero />
 		<WhyChooseUs />
