--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,8 +23,7 @@ import CalendarMonthIcon from '@/icons/CalendarMonth.astro';
     <article class="item">
       <CalendarMonthIcon />
       <div class="item__container">
-        <span class="item__text">De lunes a viernes 8:00 a.m. a 6:00p.m.
-          Sábados 8:00 a.m. a 1:00p.m.</span>
+        <span class="item__text">De lunes a viernes 8:00 a.m. a 6:00p.m.</span>
         <span class="item__text">Sábados 8:00 a.m. a 1:00p.m.</span>
       </div>
     </article>
