--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,8 +13,8 @@ import Button from "./Button.astro";
 
   <nav>
     <picture>
-      <source srcset="/img/logo-cedens2.avif" type="image/avif">
-      <img src="/img/logo-cedens2.png" alt="Logo de Cedens">
+      <source srcset="/img/logo-cedens.avif" type="image/avif">
+      <img src="/img/logo-cedens.png" alt="Logo de Cedens">
     </picture>
     <ul>
       {
