Update title og tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://cedensodontologia.netlify.app" />
-		<meta property="og:title" content="{title}" />
+		<meta property="og:title" content={title} />
 		<meta property="og:description" content="Cedens es un consultorio odontológico especializado en tratamientos para la salud y estética dental. Ofrecemos una gama completa de servicios odontológicos, incluyendo ortodoncia, implantes y blanqueamiento dental, en un ambiente moderno y confortable. Nuestro equipo experto se dedica a proporcionar atención personalizada y de alta calidad para asegurar la mejor experiencia y resultados para nuestros pacientes." />
 		<meta property="og:image" content="https://cedensodontologia.netlify.app/img/logo-cedens.png" />
 	</head>
