--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,9 +47,9 @@ const { title } = Astro.props;
 					entry.target.classList.add('is-visible');
 				}
 			});
-		}, { threshold: 0.5 });
+		}, { threshold: 0.3 });
 	
-		const elements = document.querySelectorAll('h1, h2, h3, h4, img, p, span, a, ul, article, button');
+		const elements = document.querySelectorAll('h1, h2, h3, h4, img, p, span, a, ul, article, button, li');
 		elements.forEach(element => {
 			observer.observe(element);
 		});
@@ -155,7 +155,7 @@ const { title } = Astro.props;
 	}
 
 
-	h1, h2, h3, h4, h5, h6, p, img, article, span, ul, a, button {
+	h1, h2, h3, h4, h5, h6, p, img, article, span, ul, a, button, li {
 		opacity: 0;
   	transition: opacity 1s ease-out, transform 1s ease-out;
 	}
