--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@ import Button from "./Button.astro";
   const navbarElements = [
     { text: 'Inicio' },
     { text: 'Nosotros' },
-    { text: 'Servicios' },
+    { text: 'Servicios', href: '/servicios' },
     { text: 'Galería de sonrisas' },
   ];
 ---
@@ -18,8 +18,8 @@ import Button from "./Button.astro";
     </picture>
     <ul>
       {
-        navbarElements.map(({ text }) => (
-          <li><a href="">{ text }</a></li>
+        navbarElements.map(({ text, href }) => (
+          <li><a href={href}>{ text }</a></li>
         ))
       }
     </ul>
