--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import Navbar from '@/components/Navbar.astro';
 import Footer from '@/components/Footer.astro';
 
-import '@fontsource-variable/montserrat';
+import '@fontsource-variable/inter';
 
 interface Props {
 	title: string;
@@ -112,7 +112,7 @@ const { title } = Astro.props;
 	}
 
 	html {
-		font-family: 'Montserrat Variable', system-ui, sans-serif;
+		font-family: 'Inter Variable', system-ui, sans-serif;
 	}
 
 	/* CSS Reset */
