--- a/src/sections/OurTeam.astro
+++ b/src/sections/OurTeam.astro
@@ -1,6 +1,7 @@
 ---
 import type { TeamMember } from "@/types/TeamMember";
 import TeamMemberCard from "@/components/TeamMemberCard.astro";
+import Carousel from "@/components/Carousel.astro";
 
 const teamMembers: TeamMember[] = [
   {
@@ -30,71 +31,9 @@ const teamMembers: TeamMember[] = [
   <div class="our-team-section__container">
     <h2 class="our-team-section__title">Nuestro equipo <span class="our-team-section__title our-team-section__title--accent">a tu servicio</span></h2>
 
-    <div class="swiper">
-      <div class="swiper-wrapper">
-        {
-        teamMembers.map((teamMember) => (
-          <div class="swiper-slide">
-            <TeamMemberCard teamMember={teamMember} />
-          </div>
-        ))
-        }
-      </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-scrollbar"></div>
-    </div>
+  <Carousel slides={teamMembers} slideComponent={TeamMemberCard} />
   </div>
 </section>
-
-
-<script>
-  import Swiper from 'swiper';
-  import { Navigation, Pagination, Scrollbar } from 'swiper/modules';
-  import 'swiper/css';
-  import 'swiper/css/navigation';
-  import 'swiper/css/pagination';
-  import 'swiper/css/scrollbar';
-
-  function initSwiper() {
-    const swiper = new Swiper('.swiper', {
-      modules: [Navigation, Pagination, Scrollbar],
-      loop: true,
-      centerInsufficientSlides: true,
-      slidesPerView: 1,
-      spaceBetween: 50,
-      breakpoints: {
-        720: {
-          slidesPerView: 2,
-          spaceBetween: 50
-        },
-        960: {
-          slidesPerView: 3,
-          spaceBetween: 50
-        },
-        1280: {
-          slidesPerView: 4,
-          spaceBetween: 50
-        }
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-    });
-
-    console.log('Swiper initialized');
-  }
-
-  // Asegúrate de que el DOM esté completamente cargado antes de inicializar Swiper
-  document.addEventListener('DOMContentLoaded', initSwiper);
-</script>
-
 
 
 <style>
@@ -119,20 +58,6 @@ const teamMembers: TeamMember[] = [
 
   .our-team-section__title--accent {
     color: var(--color-secondary);
-  }
-
-  .swiper {
-    padding: 0 48px;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    color: var(--color-primary);
-  }
-
-  .swiper-button-prev::after,
-  .swiper-button-next::after {
-    font-size: 32px;
   }
 
   @media (min-width: 960px) {
