--- a/src/sections/Testimonials.astro
+++ b/src/sections/Testimonials.astro
@@ -1,6 +1,7 @@
 ---
 import type { Testimonial } from "@/types/Testimonial";
 import TestimonialCard from "@/components/TestimonialCard.astro";
+import Carousel from "@/components/Carousel.astro";
 
 const testimonials: Testimonial[] = [
   {
@@ -46,66 +47,9 @@ const testimonials: Testimonial[] = [
   <div class="testimonials-section__container">
     <h2 class="testimonials-section__title">Lo que <span class="testimonials-section__title testimonials-section__title--accent">nuestros pacientes</span> dicen</h2>
 
-    <div class="swiper">
-      <div class="swiper-wrapper">
-        {
-        testimonials.map((testimonial) => (
-          <div class="swiper-slide">
-            <TestimonialCard testimonial={testimonial} />
-          </div>
-        ))
-        }
-      </div>
-      <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-scrollbar"></div>
-    </div>
-  </div>
+
+  <Carousel slides={testimonials} slideComponent={TestimonialCard} navigationColor="var(--color-tertiary)" />
 </section>
-
-
-<script>
-  import Swiper from 'swiper';
-  import { Navigation, Pagination, Scrollbar } from 'swiper/modules';
-  import 'swiper/css';
-  import 'swiper/css/navigation';
-  import 'swiper/css/pagination';
-  import 'swiper/css/scrollbar';
-
-  function initSwiper() {
-    const swiper = new Swiper('.swiper', {
-      modules: [Navigation, Pagination, Scrollbar],
-      loop: true,
-      centerInsufficientSlides: true,
-      slidesPerView: 1,
-      spaceBetween: 50,
-      breakpoints: {
-        720: {
-          slidesPerView: 2,
-          spaceBetween: 50
-        },
-        1280: {
-          slidesPerView: 3,
-          spaceBetween: 50
-        }
-      },
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-    });
-
-    console.log('Swiper initialized');
-  }
-
-  // Asegúrate de que el DOM esté completamente cargado antes de inicializar Swiper
-  document.addEventListener('DOMContentLoaded', initSwiper);
-</script>
 
 <style>
   .testimonials-section {
@@ -130,20 +74,6 @@ const testimonials: Testimonial[] = [
 
   .testimonials-section__title--accent {
     color: var(--color-accent);
-  }
-
-  .swiper {
-    padding: 0 48px;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    color: var(--color-tertiary);
-  }
-
-  .swiper-button-prev::after,
-  .swiper-button-next::after {
-    font-size: 32px;
   }
 
   @media (min-width: 960px) {
