--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@ import Button from "./Button.astro";
     { text: 'Inicio' },
     { text: 'Nosotros' },
     { text: 'Servicios', href: '/servicios' },
-    { text: 'Galería de sonrisas' },
+    { text: 'Galería de sonrisas', href: '/galeria-de-sonrisas' },
   ];
 ---
 
