--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,6 +62,7 @@ const { title } = Astro.props;
 		--color-secondary: #47A8FF;
 		--color-tertiary: #FFF;
 		--color-accent: #1EFCF5;
+    --color-danger: #f03535;
 		--background-color: #FFF;
 		--text-color-primary: #545A6A;
 		--text-color-secondary: #FFF;
