--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -16,6 +16,8 @@ import ContactForm from "@/components/ContactForm.astro"
 <style>
   .contact-section {
     padding: 32px;
+    max-width: 1440px;
+    margin: 0 auto;
   }
   .contact-section__title {
     margin-bottom: 32px;
