--- a/src/components/Servicios/ServiceCard.astro
+++ b/src/components/Servicios/ServiceCard.astro
@@ -9,6 +9,9 @@ interface Props {
 
 const { service, class: className, ...rest } = Astro.props;
 const { name, description, Icon } = service;
+
+const whatsappNumber = "3127180157"; // Define el número de WhatsApp aquí
+const whatsappLink = `https://wa.me/${whatsappNumber}`; // Crea el enlace completo
 ---
 
 <article class:list={['card', className]} {...rest}>
@@ -26,7 +29,9 @@ const { name, description, Icon } = service;
     <div class="card__content">
         <p>{ description }</p>
     </div>
-    <Button label='Más información' variant='primary'><WhatsappIcon /></Button>
+    <a href={whatsappLink} target="_blank" >
+      <Button label='Más información' variant='primary'><WhatsappIcon /></Button>
+    </a>
   </div>
 </article>
 
